@@ -31,252 +31,264 @@ import java.lang.reflect.Method;
  */
 public class NativeMethodInfo extends MethodInfo {
 
-  static JPFLogger logger = JPF.getLogger("gov.nasa.jpf.vm.NativePeer");
+	static JPFLogger logger = JPF.getLogger("gov.nasa.jpf.vm.NativePeer");
 
-  static final int  MAX_NARGS = 6;
-  static Object[][]  argCache;
+	static final int MAX_NARGS = 6;
+	static Object[][] argCache;
 
-  static {
-    argCache = new Object[MAX_NARGS][];
+	static {
+		argCache = new Object[MAX_NARGS][];
 
-    for (int i = 0; i < MAX_NARGS; i++) {
-      argCache[i] = new Object[i];
-    }
-  }
+		for (int i = 0; i < MAX_NARGS; i++) {
+			argCache[i] = new Object[i];
+		}
+	}
 
-  protected Method mth; // the native method to enter in lieu
-  protected NativePeer peer;
+	protected Method mth; // the native method to enter in lieu
+	protected NativePeer peer;
 
-  public NativeMethodInfo (MethodInfo mi, Method mth, NativePeer peer){
-    super(mi);  // <2do> do we want any operands or locals?
+	public NativeMethodInfo(MethodInfo mi, Method mth, NativePeer peer) {
+		super(mi); // <2do> do we want any operands or locals?
 
-    this.peer = peer;
-    this.mth = mth;
+		this.peer = peer;
+		this.mth = mth;
 
-    ci.setNativeCallCode(this);
-  }
+		ci.setNativeCallCode(this);
+	}
 
-  public void replace( MethodInfo mi){
-    mthTable.set(mi.globalId, this);
-    mi.ci.putDeclaredMethod(this);
-  }
-  
-  @Override
-  public boolean isUnresolvedNativeMethod() {
-    // we are already a NativeMethodInfo
-    return false;
-  }
+	public void replace(MethodInfo mi) {
+		mthTable.set(mi.globalId, this);
+		mi.ci.putDeclaredMethod(this);
+	}
 
-  @Override
-  public boolean isMJI () {
-    return true;
-  }
+	@Override
+	public boolean isUnresolvedNativeMethod() {
+		// we are already a NativeMethodInfo
+		return false;
+	}
 
-  public boolean hasEmptyBody (){
-    // how would we know
-    return false;
-  }
+	@Override
+	public boolean isMJI() {
+		return true;
+	}
 
-  public NativePeer getNativePeer() {
-    return peer;
-  }
+	@Override
+	public boolean hasEmptyBody() {
+		// how would we know
+		return false;
+	}
 
-  public Method getMethod() {
-    return mth;
-  }
+	public NativePeer getNativePeer() {
+		return peer;
+	}
 
-  @Override
-  public String getStackTraceSource() {
-    if (peer != null){
-      return peer.getPeerClassName();
-    } else {
-      return "no peer";
-    }
-  }
+	public Method getMethod() {
+		return mth;
+	}
 
-  @Override
-  public int getLineNumber (Instruction pc) {
-    return -1; // we have no line numbers
-  }
+	@Override
+	public String getStackTraceSource() {
+		if (peer != null) {
+			return peer.getPeerClassName();
+		} else {
+			return "no peer";
+		}
+	}
 
-  public Instruction executeNative (ThreadInfo ti) {
-    Object   ret = null;
-    Object[] args = null;
-    MJIEnv   env = ti.getMJIEnv();
-        
-    NativeStackFrame nativeFrame = (NativeStackFrame)ti.getTopFrame();
+	@Override
+	public int getLineNumber(Instruction pc) {
+		return -1; // we have no line numbers
+	}
 
-    env.setCallEnvironment(this);
+	public Instruction executeNative(ThreadInfo ti) {
+		Object ret = null;
+		Object[] args = null;
+		MJIEnv env = ti.getMJIEnv();
 
-    if (isUnsatisfiedLinkError(env)) {
-      return ti.createAndThrowException("java.lang.UnsatisfiedLinkError",
-                                        "cannot find native " + ci.getName() + '.' + getName());
-    }
+		NativeStackFrame nativeFrame = (NativeStackFrame) ti.getTopFrame();
 
-    try {
-      args = nativeFrame.getArguments();
+		env.setCallEnvironment(this);
 
-      // this is the reflection call into the native peer
-      ret = mth.invoke(peer, args);
+		if (isUnsatisfiedLinkError(env)) {
+			return ti.createAndThrowException("java.lang.UnsatisfiedLinkError",
+					"cannot find native " + ci.getName() + '.' + getName());
+		}
 
-      if (env.hasException()) {
-        // even though we should prefer throwing normal exceptionHandlers,
-        // sometimes it might be better/required to explicitly throw
-        // something that's not wrapped into a InvocationTargetException
-        // (e.g. InterruptedException), which is why there still is a
-        // MJIEnv.throwException()
-        return ti.throwException( env.popException());
-      }
+		try {
+			args = nativeFrame.getArguments();
 
-      StackFrame top = ti.getTopFrame();
-      if (top == nativeFrame){ // no roundtrips, straight return
+			// this is the reflection call into the native peer
+			ret = mth.invoke(peer, args);
 
-        if (env.isInvocationRepeated()){
-          // don't advance
-          return nativeFrame.getPC();
+			if (env.hasException()) {
+				// even though we should prefer throwing normal
+				// exceptionHandlers,
+				// sometimes it might be better/required to explicitly throw
+				// something that's not wrapped into a InvocationTargetException
+				// (e.g. InterruptedException), which is why there still is a
+				// MJIEnv.throwException()
+				return ti.throwException(env.popException());
+			}
 
-        } else {
-          // we don't have to do a ti.topClone() because the last insn left
-          // is NATIVERETURN. Even if a listener creates a CG on it, it won't
-          // modify its StackFrame, which is then popped anyways
+			StackFrame top = ti.getTopFrame();
+			if (top == nativeFrame) { // no roundtrips, straight return
 
-          nativeFrame.setReturnValue(ret);
-          nativeFrame.setReturnAttr(env.getReturnAttribute());
+				if (env.isInvocationRepeated()) {
+					// don't advance
+					return nativeFrame.getPC();
 
-          return nativeFrame.getPC().getNext(); // that should be the NATIVERETURN
-        }
+				} else {
+					// we don't have to do a ti.topClone() because the last insn
+					// left
+					// is NATIVERETURN. Even if a listener creates a CG on it,
+					// it won't
+					// modify its StackFrame, which is then popped anyways
 
-      } else {
-        // direct calls from within the native method, i.e. nativeFrame is not
-        // on top anymore, but its current instruction (invoke) will be reexecuted
-        // because DirectCallStackFrames don't advance the pc of the new top top upon return
-        return top.getPC();
-      }
+					nativeFrame.setReturnValue(ret);
+					nativeFrame.setReturnAttr(env.getReturnAttribute());
 
-    } catch (IllegalArgumentException iax) {
-      logger.warning(iax.toString());
-      return ti.createAndThrowException("java.lang.IllegalArgumentException",
-                                        "calling " + ci.getName() + '.' + getName());
-    } catch (IllegalAccessException ilax) {
-      logger.warning(ilax.toString());
-      return ti.createAndThrowException("java.lang.IllegalAccessException",
-                                        "calling " + ci.getName() + '.' + getName());
-    } catch (InvocationTargetException itx) {
+					return nativeFrame.getPC().getNext(); // that should be the
+															// NATIVERETURN
+				}
 
-      // if loading a class throws an exception
-      if(itx.getTargetException() instanceof ClassInfoException) {
-        ClassInfoException cie = (ClassInfoException) itx.getTargetException();
-        return ti.createAndThrowException(cie.getExceptionClass(), cie.getMessage());
-      }
+			} else {
+				// direct calls from within the native method, i.e. nativeFrame
+				// is not
+				// on top anymore, but its current instruction (invoke) will be
+				// reexecuted
+				// because DirectCallStackFrames don't advance the pc of the new
+				// top top upon return
+				return top.getPC();
+			}
 
-      if (itx.getTargetException() instanceof UncaughtException) {  // Native methods could 
-        throw (UncaughtException) itx.getTargetException();
-      } 
-       
-      // this will catch all exceptionHandlers thrown by the native method execution
-      // we don't try to hand them back to the application
-      throw new JPFNativePeerException("exception in native method "
-          + ci.getName() + '.' + getName(), itx.getTargetException());
-    }
-  }
+		} catch (IllegalArgumentException iax) {
+			logger.warning(iax.toString());
+			return ti.createAndThrowException(
+					"java.lang.IllegalArgumentException",
+					"calling " + ci.getName() + '.' + getName());
+		} catch (IllegalAccessException ilax) {
+			logger.warning(ilax.toString());
+			return ti.createAndThrowException(
+					"java.lang.IllegalAccessException",
+					"calling " + ci.getName() + '.' + getName());
+		} catch (InvocationTargetException itx) {
 
-  protected boolean isUnsatisfiedLinkError(MJIEnv env){
-    return(mth == null);
-  }
+			// if loading a class throws an exception
+			if (itx.getTargetException() instanceof ClassInfoException) {
+				ClassInfoException cie = (ClassInfoException) itx
+						.getTargetException();
+				return ti.createAndThrowException(cie.getExceptionClass(),
+						cie.getMessage());
+			}
 
-  /**
-   * Get and convert the native method parameters off the ThreadInfo stack.
-   * Use the MethodInfo parameter type info for this (not the reflect.Method
-   * type array), or otherwise we won't have any type check
-   */
-  protected Object[] getArguments (ThreadInfo ti) {
-    // these are just local refs to speed up
-    int      nArgs = getNumberOfArguments();
-    byte[]   argTypes = getArgumentTypes();
+			if (itx.getTargetException() instanceof UncaughtException) { // Native
+																			// methods
+																			// could
+				throw (UncaughtException) itx.getTargetException();
+			}
 
-    //Object[] a = getArgArray(nArgs + 2);
-    Object[] a = new Object[nArgs+2];
+			// this will catch all exceptionHandlers thrown by the native method
+			// execution
+			// we don't try to hand them back to the application
+			throw new JPFNativePeerException("exception in native method "
+					+ ci.getName() + '.' + getName(), itx.getTargetException());
+		}
+	}
 
-    int      stackOffset;
-    int      i, j, k;
-    int      ival;
-    long     lval;
-    StackFrame caller = ti.getTopFrame();
+	protected boolean isUnsatisfiedLinkError(MJIEnv env) {
+		return (mth == null);
+	}
 
+	/**
+	 * Get and convert the native method parameters off the ThreadInfo stack.
+	 * Use the MethodInfo parameter type info for this (not the reflect.Method
+	 * type array), or otherwise we won't have any type check
+	 */
+	protected Object[] getArguments(ThreadInfo ti) {
+		// these are just local refs to speed up
+		int nArgs = getNumberOfArguments();
+		byte[] argTypes = getArgumentTypes();
 
-    for (i = 0, stackOffset = 0, j = nArgs + 1, k = nArgs - 1;
-         i < nArgs;
-         i++, j--, k--) {
-      switch (argTypes[k]) {
-      case Types.T_BOOLEAN:
-        ival = caller.peek(stackOffset);
-        a[j] = Boolean.valueOf(Types.intToBoolean(ival));
+		// Object[] a = getArgArray(nArgs + 2);
+		Object[] a = new Object[nArgs + 2];
 
-        break;
+		int stackOffset;
+		int i, j, k;
+		int ival;
+		long lval;
+		StackFrame caller = ti.getTopFrame();
 
-      case Types.T_BYTE:
-        ival = caller.peek(stackOffset);
-        a[j] = Byte.valueOf((byte) ival);
+		for (i = 0, stackOffset = 0, j = nArgs + 1, k = nArgs - 1; i < nArgs; i++, j--, k--) {
+			switch (argTypes[k]) {
+			case Types.T_BOOLEAN:
+				ival = caller.peek(stackOffset);
+				a[j] = Boolean.valueOf(Types.intToBoolean(ival));
 
-        break;
+				break;
 
-      case Types.T_CHAR:
-        ival = caller.peek(stackOffset);
-        a[j] = Character.valueOf((char) ival);
+			case Types.T_BYTE:
+				ival = caller.peek(stackOffset);
+				a[j] = Byte.valueOf((byte) ival);
 
-        break;
+				break;
 
-      case Types.T_SHORT:
-        ival = caller.peek(stackOffset);
-        a[j] = new Short((short) ival);
+			case Types.T_CHAR:
+				ival = caller.peek(stackOffset);
+				a[j] = Character.valueOf((char) ival);
 
-        break;
+				break;
 
-      case Types.T_INT:
-        ival = caller.peek(stackOffset);
-        a[j] = new Integer(ival);
+			case Types.T_SHORT:
+				ival = caller.peek(stackOffset);
+				a[j] = new Short((short) ival);
 
-        break;
+				break;
 
-      case Types.T_LONG:
-        lval = caller.peekLong(stackOffset);
-        stackOffset++; // 2 stack words
-        a[j] = new Long(lval);
+			case Types.T_INT:
+				ival = caller.peek(stackOffset);
+				a[j] = new Integer(ival);
 
-        break;
+				break;
 
-      case Types.T_FLOAT:
-        ival = caller.peek(stackOffset);
-        a[j] = new Float(Types.intToFloat(ival));
+			case Types.T_LONG:
+				lval = caller.peekLong(stackOffset);
+				stackOffset++; // 2 stack words
+				a[j] = new Long(lval);
 
-        break;
+				break;
 
-      case Types.T_DOUBLE:
-        lval = caller.peekLong(stackOffset);
-        stackOffset++; // 2 stack words
-        a[j] = new Double(Types.longToDouble(lval));
+			case Types.T_FLOAT:
+				ival = caller.peek(stackOffset);
+				a[j] = new Float(Types.intToFloat(ival));
 
-        break;
+				break;
 
-      default:
-        // NOTE - we have to store T_REFERENCE as an Integer, because
-        // it shows up in our native method as an 'int'
-        ival = caller.peek(stackOffset);
-        a[j] = new Integer(ival);
-      }
+			case Types.T_DOUBLE:
+				lval = caller.peekLong(stackOffset);
+				stackOffset++; // 2 stack words
+				a[j] = new Double(Types.longToDouble(lval));
 
-      stackOffset++;
-    }
+				break;
 
-    //--- set  our standard MJI header arguments
-    if (isStatic()) {
-      a[1] = new Integer(ci.getClassObjectRef());
-    } else {
-      a[1] = new Integer(ti.getCalleeThis(this));
-    }
+			default:
+				// NOTE - we have to store T_REFERENCE as an Integer, because
+				// it shows up in our native method as an 'int'
+				ival = caller.peek(stackOffset);
+				a[j] = new Integer(ival);
+			}
 
-    a[0] = ti.getMJIEnv();
+			stackOffset++;
+		}
 
-    return a;
-  }
+		// --- set our standard MJI header arguments
+		if (isStatic()) {
+			a[1] = new Integer(ci.getClassObjectRef());
+		} else {
+			a[1] = new Integer(ti.getCalleeThis(this));
+		}
+
+		a[0] = ti.getMJIEnv();
+
+		return a;
+	}
 }
